--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 								<ul class="features">
 									<li>
 										<h3>Paid positions</h3>
-										<p>$9/hr, 3-5hrs/week during the academic year</p>
+										<p>$9/hr, 3-5hrs/week</p>
 									</li>
 									<li>
 										<h3>Training</h3>
-										<p>The Digital Scholarship team will train compañeros in ethical data curation, digitization, web design, information security, and project design/management.</p>
+										<p>The Digital Scholarship team trains compañeros in ethical data curation, digitization, web design, information security, and project design/management.</p>
 									</li>
 									<li>
 										<h3>Research</h3>
@@ -75,8 +75,7 @@
 									Commitment to five hours of work per week<br />
 									Interest in human rights and historical memory<br />
 									Interest in the technical aspects of the project and a willingness to learn<br />
-									Knowledge of HTML, CSS, and Javascript preferred but not required<br />
-									Experience with web design, content management systems (e.g. Wordpress, Drupal, Omeka), and writing content for the web preferred but not required<br />
+									HTML, CSS, and Javascript experience preferred but not required<br />
 									</p>
 								</header>
 							</section>
