--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 										<header class="major">
 											<h2>Work on a human rights archive in Guatemala</h2>
 										</header>
-										<p>The Digital Scholarship (DS) team seeks a cohort of Spanish-speaking students to work as Digital Scholarship Compañeros: a paid fellowship working with the Grupo de Apoyo Mutuo (GAM) on a collaborative archival project in Guatemala. Founded in 1984 by friends and family of murdered activists, the GAM has collected textual, visual, and audio-materials related to ongoing human rights trials and historical memory. Compañeros will also have the opportunity to apply for an 8-10 week Center for Peace and Global Citizenship summer internship to work with the GAM in Guatemala City. </p>
+										<p>The <a href="https://www.haverford.edu/library/digital-scholarship">Digital Scholarship</a> (DS) team seeks a cohort of Spanish-speaking students to work as Digital Scholarship Compañeros: a paid fellowship working with the <a href"http://grupodeapoyomutuo.org.gt/">Grupo de Apoyo Mutuo</a> (GAM) on a collaborative archival project in Guatemala. Founded in 1984 by friends and family of murdered activists, the GAM has collected textual, visual, and audio-materials related to ongoing human rights trials and historical memory. Compañeros will also have the opportunity to apply for an 8-10 week <a href"https://www.haverford.edu/peace-and-global-citizenship/internships">Center for Peace and Global Citizenship summer internship</a> to work with the GAM in Guatemala City. </p>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
