Updated for fall 2018 Compas
Modified description and details

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 										<header class="major">
 											<h2>Work on a human rights archive in Guatemala</h2>
 										</header>
-										<p>The <a href="https://www.haverford.edu/library/digital-scholarship">Digital Scholarship</a> (DS) team seeks a cohort of Spanish-speaking students to work as Digital Scholarship Compañeros: a paid fellowship working with the <a href"http://grupodeapoyomutuo.org.gt/">Grupo de Apoyo Mutuo</a> (GAM) on a collaborative archival project in Guatemala. Founded in 1984 by friends and family of murdered activists, the GAM has collected textual, visual, and audio-materials related to ongoing human rights trials and historical memory. Compañeros will also have the opportunity to apply for an 8-10 week <a href"https://www.haverford.edu/peace-and-global-citizenship/internships">Center for Peace and Global Citizenship summer internship</a> to work with the GAM in Guatemala City. </p>
+										<p>The <a href="https://www.haverford.edu/library/digital-scholarship">Digital Scholarship</a> (DS) team seeks Spanish-speaking students interested in human rights and historical memory to work for the fall and spring semesters on a the <a=href="http://ds.haverford.edu/gam-archive">GAM Digital Archive Project</a>. With training and guidance from the DS team, students will work with the <a href"http://grupodeapoyomutuo.org.gt/">Grupo de Apoyo Mutuo</a>, a Guatemalan human rights organization, to research and describe archival materials related to victims of disappearance during the country’s civil war. Students will also help develop digital scholarship about justice and historical memory in Guatemala.
+										Compañeros will also have the opportunity to apply for an 8-10 week <a href"https://www.haverford.edu/peace-and-global-citizenship/internships">Center for Peace and Global Citizenship summer internship</a> to work with the GAM in Guatemala City.</p></br>
+										</br>
+										Founded in 1984 by friends and family of ‘disappeared’ activists, the GAM and its archive are the product of Cold War violence. During the height of the conflict, revolutionary guerrillas fought U.S.-backed Guatemalan military and police forces and more than 200,000 people lost their lives. The Guatemalan Truth Commission’s 1999 report attributed 93% of human rights violations to state security and related paramilitary forces. For three decades, the GAM has collected textual, visual, and audio-materials related to ongoing human rights trials and historical memory of this violent period. 
+										</p>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
@@ -58,7 +62,7 @@
 									</li>
 									<li>
 										<h3>Training</h3>
-										<p>The Digital Scholarship team trains compañeros in ethical data curation, digitization, web design, information security, and project design/management.</p>
+										<p>Training in digital tools and methods for ethical data curation, digital archiving, digitization, web design, digital portfolios, information security/ethics, and project design/management.</p>
 									</li>
 									<li>
 										<h3>Research</h3>
@@ -84,7 +88,7 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Apply</h2>
-									<p>Apply in person at Magill Library by Monday, September 11, 2017.<br />
+									<p>Apply <a href="https://www.haverford.edu/libraries/news/libraries-are-hiring">online</a> at by Friday, September 11, 2017.<br />
 									Email agalarza@haverford.edu with questions.</p>
 								</header>
 							</section>
